<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mBackGround"
    tools:context=".view.LogoScreen">

    <LinearLayout
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@mipmap/logo" />

        <TextView
            android:textSize="@dimen/bigFontSize"
            android:textColor="@color/darkText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name" />
        <TextView
            android:layout_marginTop="@dimen/distance"
            android:textSize="@dimen/smallSFontSize"
            android:textColor="@color/normalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/suixinerpai" />
    </LinearLayout>

    <TextView
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="@dimen/smallFontSize"
        android:textColor="@color/normalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copy_right" />

</androidx.constraintlayout.widget.ConstraintLayout>