<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/videoLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <FrameLayout
        android:id="@+id/videoContentLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.deep.snapshot.weight.CameraView
            android:id="@+id/camera_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible" />

        <SurfaceView
            android:id="@+id/points_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </FrameLayout>

    <View
        android:id="@+id/settingScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <LinearLayout
            android:id="@+id/centerTvLin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:translationX="27dp">

            <TextView
                android:id="@+id/photoTouch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/photo_string"
                android:textColor="#ffff00"
                android:textSize="@dimen/smallFontSize"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/videoTouch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:padding="10dp"
                android:text="@string/video_string"
                android:textColor="@color/mBackGround"
                android:textSize="@dimen/smallFontSize"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="10dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <com.prohua.roundlayout.RoundAngleFrameLayout
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:radius="20dp">

                    <LinearLayout
                        android:id="@+id/photoLin"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#333333"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/localPic"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />
                    </LinearLayout>
                </com.prohua.roundlayout.RoundAngleFrameLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/takeTouch"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@mipmap/ic_take" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/switchCamera"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@mipmap/ic_xuan" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/smallZhiLin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/kaiqirenliangensuihoutai"
                android:textColor="@color/mBackGround"
                android:textSize="@dimen/smallSFontSize" />

            <com.prohua.roundlayout.RoundAngleFrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                app:radius="10dp">

                <TextView
                    android:id="@+id/cancelZhiBo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#333"
                    android:gravity="center"
                    android:paddingStart="30dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="30dp"
                    android:paddingBottom="10dp"
                    android:text="@string/dianjiquxiaogensui"
                    android:textColor="@color/mBackGround"
                    android:textSize="@dimen/smallSFontSize" />
            </com.prohua.roundlayout.RoundAngleFrameLayout>
        </LinearLayout>


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#000000"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/bleTouch"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:src="@mipmap/ic_blue" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/flashTouch"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:src="@mipmap/ic_shan" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/screenLock"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:src="@mipmap/ic_lock" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/zhiBoTouch"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:src="@mipmap/ic_bo" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/menuTouch"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:src="@mipmap/ic_menu" />
            </LinearLayout>

        </LinearLayout>

        <com.prohua.roundlayout.RoundAngleFrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:radius="10dp">

            <LinearLayout
                android:id="@+id/timeLinTextLin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0"
                android:background="#55000000"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp">

                <TextView
                    android:id="@+id/timeLinText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="00:00:00"
                    android:textColor="#ffffff"
                    android:textSize="@dimen/smallFontSize"
                    android:textStyle="bold" />
            </LinearLayout>
        </com.prohua.roundlayout.RoundAngleFrameLayout>
    </LinearLayout>

    <View
        android:id="@+id/flashScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mBackGround"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.prohua.roundlayout.RoundAngleFrameLayout
                android:id="@+id/connectToastLin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:alpha="0"
                app:radius="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#55000000"
                    android:paddingStart="20dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="10dp">

                    <TextView
                        android:id="@+id/connectToastText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/device_connect_loading"
                        android:textColor="@color/mBackGround"
                        android:textSize="@dimen/smallFontSize" />
                </LinearLayout>
            </com.prohua.roundlayout.RoundAngleFrameLayout>
        </RelativeLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>